gobmkida/g2/gg_set_rand_state
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/gg_set_rand_state/src/utils/random.c:653:25: error: use of undeclared identifier 'dword_B9EF1C'
for ( i = 0LL; i != 25; dword_B9EF1C[i] = v2 ) 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/gg_set_rand_state/src/obj/5/random.o] Error 1
